--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
+buildscript {
+    apply from: '../buildDependencies/library.gradle'
+}
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -41,4 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    ui()
+    coroutines()
+    daggerHilt()
 }
