--- a/buildDependencies/library.gradle
+++ b/buildDependencies/library.gradle
@@ -8,6 +8,7 @@ ext {
         implementation "com.google.android.material:material:${Versions.material}"
         implementation "androidx.activity:activity-ktx:${Versions.activityKtx}"
         implementation "androidx.fragment:fragment-ktx:${Versions.fragmentKtx}"
+        implementation "androidx.constraintlayout:constraintlayout:${Versions.constraintLayout}"
         implementation "com.github.bumptech.glide:glide:${Versions.glide}"
         kapt "com.github.bumptech.glide:compiler:${Versions.glide}"
     }
