--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation(project(":common-utils"))
+    implementation(project(":pokedex"))
 
     ui()
     coroutines()
     daggerHilt()
+}
+
+kapt {
+    correctErrorTypes = true
 }
